--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -204,6 +204,7 @@ SoloEducationDetailsPage.secondaryDiscipline,Secondary Disciplines,Sekundäre Di
 SoloEducationDetailsPage.errorDisciplines,Please select one primary and two secondary disciplines.,Bitte wähle eine primäre und zwei sekundäre Disziplinen.,,Sélectionnez 1 discipline principale et 2 secondaires SVP
 SoloEducationDetailsPage.errorAttributes,Please select three attributes.,Bitte wähle drei Attribute.,,Sélectionnez 3 attributs SVP.
 SoloEducationDetailsPage.errorValue,Please select a value.,Bitte wähle eine Überzeugung.,,Sélectionnez une Valeur SVP.
+SoloEducationDetailsPage.errorFocuses,Please select your focuses.,,,
 SoloEducationPage.instruction.alliedMilitary,"You have chosen to commit your life to your government's military. You have undergone necessary training to prepare for your military role, whether that be formal officer education, or much more informal guerilla training.",,,
 SoloEducationPage.instruction.ambassadorDiplomat,"The years spent in training are some of the most memorable and definitive of an diplomat’s life, shaping the direction of their career going forwards. Diplomatic training takes years, covering a mixture of intense training, academic studies, and practical experiences.",,,
 SoloEducationPage.instruction.civilian,"The years spent in training are some of the most memorable and definitive of an civilian’s life, shaping the direction of their career going forwards. For some, that involves formal education; for others, it's the school of hard knocks.",,,
@@ -786,10 +787,55 @@ ExtraType.smallBindi,Small Bindi,Kleines Bindi,,
 ExtraType.risanSymbol,Risian Symbol,Risanisches Symbol,,
 ExtraType.inuitTattoo,Inuit Tattoo,Inuit-Tattoo,,
 ExtraType.ferengiHeadFlap,Ferengi Head Flap,Ferengi-Kopftuch,,
+Focus.animalHandling,Animal Handling,,,
+Focus.anthropology,Anthropology,,,
 Focus.astronavigation,Astronavigation,,,
+Focus.astrophysics,Astrophysics,,,
+Focus.bureaucracy,Bureaucracy,,,
+Focus.botany,Botany,,,
 Focus.composure,Composure,,,
+Focus.computers,Computers,,,
+Focus.cybernetics,Cybernetics,,,
+Focus.demolition,Demolition,,,
 Focus.diplomacy,Diplomacy,,,
+Focus.disguise,Disguise,,,
+Focus.disruptors,Disruptors,,,
+Focus.electroPlasmaPowerSystems,Electro-Plasma Power Systems,,,
+Focus.emergencyMedicine,Emergency Medicine,,,
+Focus.espionage,Espionage,,,
+Focus.exoTectonics,Exo-tectonics,,,
 Focus.extraVehicularActivity,Extra-Vehicular Activity,,,
+Focus.evasiveAction,Evasive Action,,,
+Focus.genetics,Genetics,,,
+Focus.geology,Geology,,,
+Focus.handPhasers,Hand Phasers,,,
+Focus.handToHandCombat,Hand-to-Hand Combat,,,
+Focus.helmOperation,Helm Operation,,,
+Focus.history,History,,,
+Focus.infectiousDiseases,Infectious Diseases,,,
+Focus.infiltration,Infiltration,,,
+Focus.inspiration,Inspiration,,,
+Focus.interrogation,Interrogation,,,
+Focus.intimidation,Intimidation,,,
+Focus.linguistics,Linguistics,,,
+Focus.persuasion,Persuasion,,,
+Focus.physics,Physics,,,
+Focus.politics,Politics,,,
+Focus.psychiatry,Psychiatry,,,
+Focus.quantumMechanics,Quantum Mechanics,,,
+Focus.shipboardTacticalSystems,Shipboard Tactical Systems,,,
+Focus.smallCraft,Small Craft,,,
+Focus.starshipRecognition,Starship Recognition,,,
+Focus.starfleetProtocols,Starfleet Protocols,,,
+Focus.surgery,Surgery,,,
+Focus.survival,Survival,,,
+Focus.teamDynamics,Team Dynamics,,,
+Focus.threatAnalysis,Threat Analysis,,,
+Focus.traumaSurgery,Trauma Surgery,,,
+Focus.transportersReplicators,Transporters & Replicators,,,
+Focus.virology,Virology,,,
+Focus.warpFieldDynamics,Warp Field Dynamics,,,
+Focus.xenobiology,Xenobiology,,,
 GovernmentType.name.andorian,Andorian,Andorianer,,Andorien
 GovernmentType.name.bajoran,Bajoran,Bajoraner,,Bajoran
 GovernmentType.name.cardassian,Cardassian,Cardassianer,,Cardassien
@@ -1118,6 +1164,10 @@ Species.human.aboutNames,"Human names vary wildly, and rather than make sweeping
 Species.human.description,"Originating on the planet Earth in the Sol system, Humans are a resilient, diverse, and adaptable species, who developed from fractious, warring nations on the brink of mutual annihilation to a united, peaceful society in less than a century, and managed to forge alliances between former enemies within a century of achieving interstellar space flight. Earth is a founder and pivotal member of the United Federation of Planets, and many of the Federation’s institutions can be found on Earth. Humans often exhibit a dichotomy in their nature — being both driven to strong emotion and careful reason — and while they have largely grown beyond their warlike and divisive past, their drive and capacity for aggression are as much a part of their success as their curiosity and analytical minds.",,,
 Species.human.exampleValue,The Drive for Exploration,,,
 Species.human.traitDescription,"Humans are adaptable and resilient, and their resolve and ambition often allow them to resist great hardship and triumph despite great adversity. However, Humans can also be reckless and stubborn, irrational, and unpredictable.",,,
+Species.hupyrian.name,Hupyrian,,,
+Species.hupyrian.exampleValue,I Obey Only One Master,,,
+Species.hupyrian.description,"The Hupyrians are physically imposing, often over two meters tall. They have wrinkly skin and large ears and noses. The Hupyrians are closely allied with the Ferengi, and their homeworld is the source of Hupyrian beetle snuff. They have tight skin with wrinkles around their eyes and mouths that give them a constant frowning expression. They are known for their devotion in service, and some will take a vow of silence where they are only permitted to speak to their masters. They are often found as bodyguards and food tasters.",,,
+Species.human.traitDescription,"Hupyrians are taller than most species, and their size alone can be intimidating. They are loyal especially when working in the employ of another, and take vows seriously.",,,
 Species.illyrian.name,Illyrian,,,
 Species.illyrian.description,"A spacefaring humanoid species that utilizes genetic engineering to adapt their bodies to the new planets they settle, rather than changing the planet to suit themselves.",,,
 Species.jelna.name,Rigellian Jelna,,,
@@ -1130,6 +1180,7 @@ Species.kelpien.soloDescription,"An empathetic people kept in check by the techn
 Species.klingon.name,Klingon,Klingonen,,
 Species.klingon.soloDescription,"A proud, warrior species centered in the Beta Quadrant. There is a great redundancy in Klingon organs, with two livers, multiple stomachs, three lungs, and an eight-chambered heart. Their skeletal structure also has several redundancies that mitigate injuries that would prove fatal to other humanoids.",,,
 Species.klingonQuchHa.name,Klingon (QuchHa’),Klingonen (QuchHa'),,
+Species.nausicaan.name,Nausicaan,,,
 Species.orion.name,Orion,Orioner,,
 Species.other.name,Custom/Other,Benutzerdefiniert/Andere,,
 Species.pandronian.name,Pandronian,,,
@@ -1189,6 +1240,9 @@ Species.xindiArboreal.name,Xindi-Arboreal,Xindi-Arboreale,,
 Species.xindiPrimate.name,Xindi-Primate,Xindi-Primaten,,
 Species.xindiReptilian.name,Xindi-Reptilian,Xindi-Reptilianer,,
 Species.xindiInsectoid.name,Xindi-Insectoid,Xindi-Insektoide,,
+Species.yridian.name,Yridian,,,
+Species.yridian.traitDescription,"The Yridians are usually bald, but some have dark, curly hair. They have a wrinkly appearance, with rodent-like ears and small eyes and noses. They have a ridge running from their nose, up and over their heads. Most are thumbless and have only four fingers on each hand, but some have thumbs. They are often devious and untrustworthy.",,,
+Species.yridian.description,"Yridians are often free agents working with those who share their personal goals, or as hired hands for other species. They are known to be traders, smugglers and information merchants, and are unwilling to part with information without payment. They were believed to be extinct until the mid-2360s until the Federation made first contact. They use disruptor weaponry.",,,
 Species.zakdorn.name,Zakdorn,Zakdorn,,
 Species.mixedSpecies.text,{{primarySpecies}} / {{secondarySpecies}},{{primarySpecies}} / {{secondarySpecies}},,
 Species.formerSpecies.text,{{primarySpecies}} (originally {{otherSpecies}}),{{primarySpecies}} (ursprünglich {{otherSpecies}}),,
