additional uniforms for Suliban and Romulans

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -890,6 +890,7 @@
     "HairType.bald": "Bald",
     "HairType.bowlCutHair": "Bowl Cut",
     "HairType.chinLengthBob": "Chin Length Bob",
+    "HairType.mature": "Mature",
     "HairType.stylishHair": "Stylish Short",
     "HairType.sidePart": "Side Part",
     "HairType.shortAfro": "Short Curly",
@@ -1559,13 +1560,16 @@
     "Talent.wormholeRelaySystem.soloDescription": "The ship has an additional sensor system outfitted with high-energy transceivers, verteron sensors, and neutrino sensors. These sensors, combined with field-generation devices, allow the ship to send and receive data streams through wormholes.",
 
     "UniformEra.civilian": "Civilian",
+    "UniformEra.dominionWar": "Dominion War",
     "UniformEra.enterprise": "Enterprise",
+    "UniformEra.jemHadar": "Jem'Hadar",
+    "UniformEra.klingon": "Klingon Armour",
+    "UniformEra.lowerDecks": "Lower Decks",
+    "UniformEra.monsterMaroon": "The Wrath of Khan",
     "UniformEra.originalSeries": "Original Series",
     "UniformEra.originalSeriesKlingon": "Klingon (Original Series)",
-    "UniformEra.klingon": "Klingon Armour",
-    "UniformEra.monsterMaroon": "The Wrath of Khan",
-    "UniformEra.dominionWar": "Dominion War",
-    "UniformEra.lowerDecks": "Lower Decks",
+    "UniformEra.romulan": "Romulan",
+    "UniformEra.suliban": "Suliban",
     "UniformEra.voyagerDS9": "Voyager/DS9",
 
     "Upbringing.starfleet.militaryOrExploration.name": "Starfleet",
