--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -849,6 +849,7 @@ GovernmentType.name.other,Other,Andere,,Autre
 HairType.bald,Bald,Glatze,,
 HairType.bowlCutHair,Bowl Cut,Topfschnitt,,
 HairType.chinLengthBob,Chin Length Bob,,,
+HairType.mature,Mature,,,
 HairType.stylishHair,Stylish Short,,,
 HairType.sidePart,Side Part,,,
 HairType.shortAfro,Short Curly,,,
@@ -1359,13 +1360,16 @@ Talent.versatileTractorBeam.soloDescription,"The ship has exotic particle emitte
 Talent.wormholeRelaySystem,Wormhold Relay System,,,
 Talent.wormholeRelaySystem.soloDescription,"The ship has an additional sensor system outfitted with high-energy transceivers, verteron sensors, and neutrino sensors. These sensors, combined with field-generation devices, allow the ship to send and receive data streams through wormholes.",,,
 UniformEra.civilian,Civilian,Zivilist,,
+UniformEra.dominionWar,Dominion War,Dominionkrieg,,
 UniformEra.enterprise,Enterprise,Enterprise,,
+UniformEra.jemHadar,Jem'Hadar,,,
+UniformEra.klingon,Klingon Armour,Klingonische Rüstung,,
+UniformEra.lowerDecks,Lower Decks,Lower Decks,,
+UniformEra.monsterMaroon,The Wrath of Khan,Der Zorn des Khan,,
 UniformEra.originalSeries,Original Series,Originalserie,,
 UniformEra.originalSeriesKlingon,Klingon (Original Series),Klingonen (Originalserie),,
-UniformEra.klingon,Klingon Armour,Klingonische Rüstung,,
-UniformEra.monsterMaroon,The Wrath of Khan,Der Zorn des Khan,,
-UniformEra.dominionWar,Dominion War,Dominionkrieg,,
-UniformEra.lowerDecks,Lower Decks,Lower Decks,,
+UniformEra.romulan,Romulan,,,
+UniformEra.suliban,Suliban,,,
 UniformEra.voyagerDS9,Voyager/DS9,Voyager/DS9,,
 Upbringing.starfleet.militaryOrExploration.name,Starfleet,Sternenflotte,,
 Upbringing.starfleet.businessOrTrade.name,Business or Trade,Wirtschaft und Handel,,
