more focus translation options

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -834,13 +834,16 @@
 
     "Focus.animalHandling": "Animal Handling",
     "Focus.anthropology": "Anthropology",
+    "Focus.astrometrics": "Astrometrics",
     "Focus.astronavigation": "Astronavigation",
     "Focus.astrophysics": "Astrophysics",
     "Focus.bureaucracy": "Bureaucracy",
     "Focus.botany": "Botany",
     "Focus.composure": "Composure",
     "Focus.computers": "Computers",
+    "Focus.culturalStudies": "Cultural Studies",
     "Focus.cybernetics": "Cybernetics",
+    "Focus.debate": "Debate",
     "Focus.demolition": "Demolition",
     "Focus.diplomacy": "Diplomacy",
     "Focus.disguise": "Disguise",
@@ -851,28 +854,41 @@
     "Focus.exoTectonics": "Exo-tectonics",
     "Focus.extraVehicularActivity": "Extra-Vehicular Activity",
     "Focus.evasiveAction": "Evasive Action",
+    "Focus.finances": "Finances",
     "Focus.genetics": "Genetics",
     "Focus.geology": "Geology",
     "Focus.handPhasers": "Hand Phasers",
     "Focus.handToHandCombat": "Hand-to-Hand Combat",
     "Focus.helmOperation": "Helm Operation",
     "Focus.history": "History",
+    "Focus.holoprogramming": "Holoprogramming",
     "Focus.infectiousDiseases": "Infectious Diseases",
     "Focus.infiltration": "Infiltration",
     "Focus.inspiration": "Inspiration",
     "Focus.interrogation": "Interrogation",
     "Focus.intimidation": "Intimidation",
+    "Focus.law": "Law",
     "Focus.linguistics": "Linguistics",
+    "Focus.manufacturing": "Manufacturing",
+    "Focus.metallurgy": "Metallurgy",
+    "Focus.music": "Music",
+    "Focus.negotiation": "Negotiation",
+    "Focus.observation": "Observation",
     "Focus.persuasion": "Persuasion",
+    "Focus.philosophy": "Philosophy",
     "Focus.physics": "Physics",
     "Focus.politics": "Politics",
     "Focus.psychiatry": "Psychiatry",
+    "Focus.psychology": "Psychology",
     "Focus.quantumMechanics": "Quantum Mechanics",
+    "Focus.rapidAnalysis": "Rapid Analysis",
     "Focus.shipboardTacticalSystems": "Shipboard Tactical Systems",
     "Focus.smallCraft": "Small Craft",
     "Focus.starshipRecognition": "Starship Recognition",
     "Focus.starfleetProtocols": "Starfleet Protocols",
+    "Focus.structuralEngineering": "Structural Engineering",
     "Focus.surgery": "Surgery",
+    "Focus.survey": "Survey",
     "Focus.survival": "Survival",
     "Focus.teamDynamics": "Team Dynamics",
     "Focus.threatAnalysis": "Threat Analysis",
