--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -799,13 +799,16 @@ ExtraType.zaraniteMask,Zaranite Breather Mask,,,
 ExtraType.ferengiHeadFlap,Ferengi Head Flap,Ferengi-Kopftuch,,
 Focus.animalHandling,Animal Handling,Tierführung,,
 Focus.anthropology,Anthropology,Anthropologie,,
+Focus.astrometrics,Astrometrics,,,
 Focus.astronavigation,Astronavigation,Astronavigation,,
 Focus.astrophysics,Astrophysics,Astrophysik,,
 Focus.bureaucracy,Bureaucracy,Bürokratie,,
 Focus.botany,Botany,Botanik,,
 Focus.composure,Composure,Haltung,,
 Focus.computers,Computers,Computer,,
+Focus.culturalStudies,Cultural Studies,,,
 Focus.cybernetics,Cybernetics,Kybernetik,,
+Focus.debate,Debate,,,
 Focus.demolition,Demolition,Demolierung,,
 Focus.diplomacy,Diplomacy,Diplomtie,,
 Focus.disguise,Disguise,Tarnung,,
@@ -816,28 +819,41 @@ Focus.espionage,Espionage,Spionage,,
 Focus.exoTectonics,Exo-tectonics,Exotektonik,,
 Focus.extraVehicularActivity,Extra-Vehicular Activity,Außenbordeinsatz,,
 Focus.evasiveAction,Evasive Action,Ausweichmanöver,,
+Focus.finances,Finances,,,
 Focus.genetics,Genetics,Genetik,,
 Focus.geology,Geology,Geologie,,
 Focus.handPhasers,Hand Phasers,Handphaser,,
 Focus.handToHandCombat,Hand-to-Hand Combat,Unbewaffneter Nahkampf,,
 Focus.helmOperation,Helm Operation,Steuerkontrolle,,
 Focus.history,History,Geschichte,,
+Focus.holoprogramming,Holoprogramming,,,
 Focus.infectiousDiseases,Infectious Diseases,Ansteckende Krankheiten,,
 Focus.infiltration,Infiltration,Infiltration,,
 Focus.inspiration,Inspiration,Inspiration,,
 Focus.interrogation,Interrogation,Vernehmung,,
 Focus.intimidation,Intimidation,Einschüchterung,,
+Focus.law,Law,,,
 Focus.linguistics,Linguistics,Linguistik,,
+Focus.manufacturing,Manufacturing,,,
+Focus.metallurgy,Metallurgy,,,
+Focus.music,Music,,,
+Focus.negotiation,Negotiation,,,
+Focus.observation,Observation,,,
 Focus.persuasion,Persuasion,Überzeugen,,
+Focus.philosophy,Philosophy,,,
 Focus.physics,Physics,Physik,,
 Focus.politics,Politics,Politik,,
 Focus.psychiatry,Psychiatry,Psychiatrie,,
+Focus.psychology,Psychology,,,
 Focus.quantumMechanics,Quantum Mechanics,Quantenmechnaik,,
+Focus.rapidAnalysis,Rapid Analysis,,,
 Focus.shipboardTacticalSystems,Shipboard Tactical Systems,Taktische Raumschiffsysteme,,
 Focus.smallCraft,Small Craft,Shuttles,,
 Focus.starshipRecognition,Starship Recognition,Raumschiffidentifikation,,
 Focus.starfleetProtocols,Starfleet Protocols,Sternenflotten-Protokoll,,
+Focus.structuralEngineering,Structural Engineering,,,
 Focus.surgery,Surgery,Chirurgie,,
+Focus.survey,Survey,,,
 Focus.survival,Survival,Überlebenstraining,,
 Focus.teamDynamics,Team Dynamics,Teamdynamik,,
 Focus.threatAnalysis,Threat Analysis,Bedrohungsanalyse,,
