--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -978,6 +978,8 @@ NoseType.smallFlat,"Small, Flat",,,
 NoseType.smallUpTurned,"Small, Up-turned",,,
 NoseType.hawk,Hawk,,,
 NoseType.broadFlat,"Broad, Flat, Pronounced Nostrils",,,
+NpcCharacterType.minorPolity,Minor Polity,,,
+NpcCharacterType.rogueRuffianMercenary,"Rogues, Ruffians, and Mercenaries",,,
 NpcType.minor.name,Minor NPC,Einfacher NSC,,PNJ Mineur
 NpcType.notable.name,Notable NPC,Bedeutender NSC,,PNJ Notable
 NpcType.major.name,Major NPC,Herausragender NSC,,PNJ Majeur
@@ -1338,6 +1340,8 @@ Talent.cloakingDevice,Cloaking Device,,,
 Talent.cloakingDevice.soloDescription,"The vessel has a device that allows it to vanish from sensors. While cloaked, the vessel cannot attempt any attacks, nor can it be the target of an attack unless the attacker finds some way of detecting the cloaked vessel. While cloaked, a vessel’s shields are down.",,,
 Talent.commandShip,Command Ship,,,
 Talent.commandShip.soloDescription,The ship has command and control systems allowing it to coordinate easily with allies during a crisis.,,,
+Talent.culturalFlexibility,Cultural Flexibility,,,
+Talent.culturalFlexibility.description,"Your people are friendly, patient, and inquisitive, and you exemplify these traits. You are at ease when meeting new cultures, and adapt to unfamiliar social structures easily. When you attempt a Task to learn about an unfamiliar culture, or to act in an appropriate manner when interacting with members of such a culture, you reduce the Difficulty by 1.",,,
 Talent.dedicatedSubspaceTranceiverArray,Dedicated Subspace Tranceiver Array,,,
 Talent.dedicatedSubspaceTranceiverArray.soloDescription,"A starship with this talent has a section of its hull that slides away where a long, tether-like subspace transceiver array can be deployed to enhance the vessel’s communication range and clarity, even at warp.",,,
 Talent.deluxeGalley,Deluxe Galley,,,
@@ -1350,10 +1354,14 @@ Talent.electronicWarfareSystems,Electronic Warfare Systems,,,
 Talent.electronicWarfareSystems.soloDescription,The ship’s communications systems have been specially designed to intercept and disrupt enemy communications in battle.,,,
 Talent.emergencyMedicalHologram,Emergency Medical Hologram,,,
 Talent.emergencyMedicalHologram.soloDescription,"The ship’s sickbay is equipped with holoemitters and a state-of-the-art holographic doctor, able to assist medical personnel during emergencies. This character cannot go into any location not equipped with holoemitters.",,,
+Talent.empath,Empath,,,
+Talent.empath.description,"You can sense the emotions of most living beings nearby, and can communicate telepathically with other empaths and telepaths, as well as those with whom you are extremely familiar. You cannot choose not to sense the emotions of those nearby, except for those who are resistant to telepathy. It may require effort and a Task to pick out the emotions of a specific individual in a crowd, or to block out the emotions of those nearby. Increase the Difficulty of this Task if the situation is stressful, if there are a lot of beings present, if the target has resistance to telepathy, and other relevant factors.",,,
 Talent.extensiveShuttlebays,Extensive Shuttlebays,,,
 Talent.extensiveShuttlebays.soloDescription,"The vessel’s shuttlebays are large, well-supplied, and able to support a larger number of active shuttle missions simultaneously.",,,
 Talent.fastTargetingSystems,Fast Targeting Systems,,,
 Talent.fastTargetingSystems.soloDescription,"The ship’s targeting systems can lock weapons on target much faster and more accurately than other ships of its class, giving it an edge in battle.",,,
+Talent.formerInitiate,Former Initiate,,,
+Talent.formerInitiate.description,"You joined the Initiate Program, hoping to be chosen by the Symbiosis Commission to become Joined. As there are far more Initiates than there are Symbionts, you were one of the many who failed, but the quality of even a failed initiate is enough for Starfleet to recruit you. When you attempt a Task using Control or Reason, and spend Determination to buy a bonus d20 for that Task, you may re-roll your dice pool. Former Initiate cannot be taken if the character has the Joined Talent — they are mutually exclusive.",,,
 Talent.highResolutionSensors,High-Resolution Sensors,,,
 Talent.highResolutionSensors.soloDescription,"The vessel’s sensors can gain large amounts of accurate data, though they are extremely sensitive.",,,
 Talent.highPowerTractorBeam,High-Power Tractor Beam,,,
@@ -1372,18 +1380,36 @@ Talent.improvedShieldRecharge,Improved Shield Recharge,,,
 Talent.improvedShieldRecharge.soloDescription,The ship’s deflector shields have redundant capacitors and emitter arrays that allow the shields to be recharged and replenished much more efficiently.,,,
 Talent.improvedWarpDrive,Improved Warp Drive,,,
 Talent.improvedWarpDrive.soloDescription,"The ship’s warp drive is more efficient, capitalizing on improved field dynamics, better control of antimatter flow rates, or some other advancement that allows the ship to expend less energy when traveling at warp.",,,
+Talent.incisiveScrutiny,Incisive Scrutiny,,,
+Talent.incisiveScrutiny.description,"You have a knack for finding weak spots in arguments, theories, and machines alike to glean information from them, learning about things by how they respond to pressure against vulnerable points. When you succeed at a Task using Control or Insight, you gain one bonus Momentum, which may only be used for the Obtain Information Momentum Spend.",,,
 Talent.independentPhaserSupply,Independent Phaser Supply,,,
 Talent.independentPhaserSupply.soloDescription,"The ship’s phasers use an independent power supply, rather than drawing directly from the ship’s other power sources.",,,
+Talent.joined,Joined,,,
+Talent.joined.description,"You have a symbiont, with lifetimes of memories to draw upon. Once per mission, you may declare that a former host had expertise in a relevant skill or field of study; you gain a single Focus for the remainder of the scene, as you draw upon those memories. Additionally, you gain a Trait with the name of the Symbiont; this reflects potential advantages of the Joining, the ability to perform rites and rituals to awaken past hosts’ memories, and the vulnerabilities inherent in the connection. Former Initiate cannot be taken if the character has the Joined Talent — they are mutually exclusive.",,,
+Talent.kolinahr,Kolinahr,,,
+Talent.kolinahr.description,"You have undergone the ritual journey to purge all emotion. You reduce the Difficulty of all Tasks to resist coercion, mental intrusion, pain, and other mental attacks by two.",,,
+Talent.mindMeld,Mind-Meld,,,
+Talent.mindMeld.description,"You have undergone training in telepathic techniques that allow the melding of minds through physical contact. This will always require a Task with a Difficulty of at least 1, which can be opposed by an unwilling participant. If successful, you link minds with the participant, sharing thoughts and memories; Momentum may be spent to gain more information, or perform deeper telepathic exchanges. This link goes both ways, and it is a tiring and potentially hazardous process for you. Complications can result in pain, disorientation, or lingering emotional or behavioral difficulties.",,,
 Talent.modularLaboratories,Modular Laboratories,,,
 Talent.modularLaboratories.soloDescription,"The ship has considerable numbers of empty, multi- purpose compartments that can be converted to laboratories as and when required.",,,
 Talent.multiVectorAssaultMode,Multi-Vector Assault Mode,,,
 Talent.multiVectorAssaultMode.soloDescription,"The vessel can split apart into three distinct sections. Each section has the same systems and departments scores as the original fully integrated starship, but each individual section has less power than when the ship is integrated. Use this in narration to create interesting advantages or complications.",,,
+Talent.nervePinch,Nerve Pinch,,,
+Talent.nervePinch.description,"You have learned numerous techniques for the stimulation and control of nerve impulses — collectively called neuropressure. Some applications of neuropressure can be used to swiftly and non-lethally incapacitate assailants. The nerve pinch counts as a melee weapon with 1[D], Size 1H, and the Intense and Non-lethal qualities. You may use Science or Medicine instead of Security when attempting a nerve pinch Attack, and may increase damage by your Science or Medicine Discipline instead of Security.",,,
+Talent.orbExperience,Orb Experience,,,
+Talent.orbExperience.description,"You have received a vision from the Bajoran Prophets, through one of the Orbs. This rare experience, though confusing at first, has shaped your life and outlook. You have one additional Value, reflecting the insights you received from the experience. The first time this Value is Challenged, roll 1[D]; if an Effect is rolled, then some foretold element of the Orb Experience has come to pass, and the Value is not crossed out as it would normally be.",,,
+Talent.parentFigure,Parent Figure,,,
+Talent.parentFigure.description,"You have a large family, with many children, nieces, and nephews, and you’ve learned how to coordinate even the most unruly and fractious of groups when necessary. When attempting or assisting a Task, and two or more other characters are involved in the Task, the first Complication generated on the Task — either by the character attempting the Task, or one of the assistants — may be ignored.",,,
 Talent.pointDefenseSystem,Point Defense System,,,
 Talent.pointDefenseSystem.soloDescription,"The ship is equipped with a system of small energy weapon emitters that operates independently from the main weapons systems. When a torpedo targets the ship, these emitters start firing in the direction it is traveling from, potentially destroying it before it impacts the shields or the ship’s hull. This system only works at subwarp speeds.",,,
+Talent.proudAndHonorable,Proud and Honorable,,,
+Talent.proudAndHonorable.description,"Your personal integrity is unimpeachable, and you will not willingly break a promise made. Whenever you attempt a Task to resist being coerced into breaking a promise, betraying your allies, or otherwise acting dishonorably, you reduce the Difficulty by 1.",,,
 Talent.quantumTorpedoes,Quantum Torpedoes,,,
 Talent.quantumTorpedoes.soloDescription,The vessel has been equipped with the latest in ship-to-ship munitions: quantum torpedoes. The ship has quantum torpedoes in addition to any other form of torpedo it carries.,,,
 Talent.rapidFireTorpedoLauncher,Rapid-Fire Torpedo Launcher,,,
 Talent.rapidFireTorpedoLauncher.soloDescription,The vessel’s torpedo launchers have been redesigned to allow the ship to fire multiple torpedoes much more quickly and accurately.,,,
+Talent.resolute,Resolute,,,
+Talent.resolute.description,"You are indomitable, and unwilling to succumb to adversity. You increase your maximum Stress by 3.",,,
 Talent.regenerativeHull,Regenerative Hull,,,
 Talent.regenerativeHull.soloDescription,"The ship’s hull is infused with reverse-engineered Borg nanite technology that seeks out and repairs the hull immediately when it is damaged, often preventing a breach before it can happen.",,,
 Talent.ruggedDesign,Rugged Design,,,
@@ -1398,8 +1424,18 @@ Talent.siphoningShields,Siphoning Shields,,,
 Talent.siphoningShields.soloDescription,"The vessel’s shield emitters are connected to a network of particle siphons that capture some of the energy released when hit by an energy weapon, channeling it back into the shields.",,,
 Talent.slimSensorSilhouette,Slim Sensor Silhouette,,,
 Talent.slimSensorSilhouette.soloDescription,"This ship is designed to present a minimal sensor return to a searching ship’s sensors through advanced hull plating, jamming, and passive subspace baffles.",,,
+Talent.spiritOfDiscovery,Spirit of Discovery,,,
+Talent.spiritOfDiscovery.description,"You have the drive, spirit, and courage to voyage into the unknown. You may spend one Determination to add three points to the group Momentum pool. The normal conditions for spending Determination still apply.",,,
+Talent.strongPagh,Strong Pagh,,,
+Talent.strongPagh.description,"You believe profoundly in the Prophets, and rely heavily upon that faith to see you through hardship. Whenever you attempt a Task to resist being coerced or threatened, you reduce the Difficulty of that Task by 1.",,,
+Talent.sturdy,Sturdy,,,
+Talent.sturdy.description,"You have a blend of physical resilience and mental fortitude such that you’re difficult to subdue. You reduce the cost to resist being knocked prone by the Knockdown damage effect by one, to a minimum of 0, and gain +1 Resistance against all non-lethal attacks.",,,
 Talent.tachyonDetectionField,Tachyon Detection Field,,,
 Talent.tachyonDetectionField.soloDescription,"The ship is equipped with a field generator that projects a cloud of tachyons around it. While the field is active, the ship is notified of any cloaked vessels that are within or pass into close range.",,,
+Talent.telepath,Telepath,,,
+Talent.telepath.description,"You can sense the surface thoughts and emotions of most living beings nearby, and can communicate telepathically with other empaths and telepaths, as well as those with whom you are extremely familiar. Surface thoughts are whatever a creature is thinking about at that precise moment. The character cannot choose not to sense the emotions or read the surface thoughts of those nearby, except for those who are resistant to telepathy. It will require effort and a Task to pick out the emotions or thoughts of a specific individual in a crowd, to search a creature’s mind for specific thoughts or memories, or to block out the minds of those nearby. Unwilling targets may resist with an Opposed Task.",,,
+Talent.theUshaan,The Ushaan,,,
+Talent.theUshaan.description,"You are experienced in the tradition of honor-dueling known as the Ushaan, having spilt much blood upon the ice. When you make a melee Attack, or are targeted by a melee Attack, and buy one or more d20s by adding to Threat, you may re-roll the dice pool for the Task. Further, you own an Ushaan-tor, a razor-sharp ice-miner’s tool used in these duels.",,,
 Talent.variableGeometryWarpField,Variable Geometry Warp Field,,,
 Talent.variableGeometryWarpField.soloDescription,"An extension of the variable pitch warp nacelles seen on the Intrepid-class and the warp vector technology found on many Vulcan-designed starships, a ship with a variable geometry warp field can adjust its subspace field in highly turbulent spacetime and can continue to provide propulsive force even then.",,,
 Talent.versatileTractorBeam,Versatile Tractor Beam,,,
